--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ name: BattleKits
 main: battlekits\BattleKits
 version: 1.0.4
 author: Falkirks
-api: [1.0.0]
+api: [3.0.0, 3.0.0-ALPHA6, 3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
 load: POSTWORLD
 softdepend: ["EconomyAPI", "PocketMoney"]
 permissions:
