--- a/resources/config.yml
+++ b/resources/config.yml
@@ -29,12 +29,14 @@ kits:
   archer:
     active-in: #Remove this setting for all worlds
       - 'world'
-      - 'word_nether'
-      - 'word_end'
+      - 'nether'
+      - 'end'
     cost: 100
     commands:  # Executed on kit give
       - 'tell {player} Enjoy your kit :)'
     on-give-message: "You're now an archer" #Message displayed when kit is delivered
+    title-kit-name: "Archer"
+    on-give-title: "You're now an archer"
     items:
       helmet: '298'
       chestplate: '299'
